-------------------------------
FlexCat Open Source - Changelog
-------------------------------

$Id$
$URL$

2007-05-07  Joerg Strohmayer <nospam@gmx.de>
    * Hardcode_c.sd and locale_other.c: Added missing const from patch
      #1713307.
    * Makefile: Fixed uname check, uname -m returns ppc, not powerpc, on
      AmigaOS4.

2007-01-21  Jens Langner <Jens.Langner@light-speed.de>
    
    * Makefile: adapted makefile to carry a DEBUG= option for compiling
      flexcat without any debugging enabled at all. Also added the "-m32" gcc
      option to the unix builds so that a 32bit version of flexcat will be
      generated. We somehow still have problems on getting correct
      catalog files generated when creating them with a 64bit flexcat.
    * flexcat.h, misc: introduced own portable datatype definitions like
      uint32,int32 and so on. These should help to nail down existing problems
      when building flexcat on 64bit system where e.g. long is defined as a
      64bit value. Adapted all 'unsigned long' and similar 64bit usages to
      use these new types instead.
    * scanct.c: fixed bug #752031 where a NULL pointer exception caused
      a crash when the COPYMSGNEW option was used under certain circumstances.

2007-01-07  David Rey <tactica@users.sourceforge.net>

    * scancd.c, scanct.c: the following events are now handled as
      errors instead of mere warnings:
      - Unexpected blanks (possibly caused by broken syntax)
      - Extra characters at the end of the line
      - Duplicated or conflicting ##version, ##language, ##name and ##rcsid
        commands
      - Missing brackets
      - Duplicated ID numbers and identifiers
    * createcatsrc.c: likewise with binary characters in string type None
    * utils.c: ditto with unexpected stuff instead of hex/octal characters
    * scanct.c: now also exits with an error if the codeset is declared
      twice, also fixed memory leak ('line' counter was never freed) and